[project]
name = 'sbot'
dynamic = ['version']
dependencies = [
	'cryptolyzer',
	'pillow',
	'pyfend',
	'python-dateutil',
	'PyYAML',
	'requests',
	'requests_oauthlib',
	'websocket-client',
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
	'E', 'F', 'I',
	'YTT', 'COM', 'T10', 'ISC', 'G', 'PIE', 'Q', 'RSE',
	'PLC', 'PLE',
	'RUF',
]
ignore = [
	'PLC0415', # import-outside-top-level
	'RUF021', # parenthesize-chained-operators
]
[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'
[tool.ruff.lint.isort]
lines-after-imports = 1
